/*
 * Copyright 2023 The Bazel Authors. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package com.google.idea.blaze.ext;

option java_package = "com.google.idea.blaze.ext";
option java_multiple_files = true;
option java_outer_classname = "FileApiProto";


message ReadReply {
  bytes data = 1;
  optional bool eof = 2;
}

message ReadRequest {
  string path = 1;
  optional string version = 2;
  optional int64 offset = 3;
  optional int64 length = 4;
}

message OpenRequest {
  string path = 1;
}

message OpenReply {
  optional string version = 1;
  optional int64 length = 2;
  optional int64 mtime_nsecs = 3;
}

service FileApi {
  // Open a file and return its stat
  rpc OpenFile(OpenRequest) returns (OpenReply) {}
  // Read a file and return the bytes
  rpc ReadFile(ReadRequest) returns (ReadReply) {}
}
